# gaussian-talker

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
checkpoints/: README.md
data/processed/: README.md
data/raw/: README.md
data/raw/obama/: README.md
docs/references/: README.md  acm-mm-2024-gaussiantalker-cho.md  acm-mm-2024-gaussiantalker-yu.md  cvpr-2025-mggtalk.md  eccv-2024-talkinggaussian.md  wacv-2026-gaussianheadtalk.md
docs/specs/: 00-project-scope.md  01-repo-foundations.md  02-dataset-and-sample-format.md  03-preprocessing-pipeline.md  04-face-motion-targets.md  05-single-identity-avatar.md  06-audio-to-motion-model.md  07-training-workflow.md  08-inference-and-rendering.md  09-evaluation-and-debugging.md  README.md
outputs/: README.md
renders/: README.md
tests/: test_smoke.py
